[package]
name = "substreams-uniswap-v3"
version = "0.1.0"
description = "Uniswap v3 Substreams"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[dependencies]
ethabi = "17.0"
prost = "0.11"
prost-types = "0.11"
hex = "0.4.3"
substreams = "0.5"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }
substreams-entity-change = { git = "https://github.com/streamingfast/substreams-entity-change/", branch = "develop" }
num-bigint = "0.4"
num-traits = "0.2.15"
tiny-keccak = "2.0.2"
phf = { version = "0.11.1", features = ["macros"] }

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }

[patch.crates-io]
substreams = { git = "https://github.com/streamingfast/substreams-rs", branch = "develop" }
